# sylvestris

./: .gitignore  README.md
.github/workflows/: main.yml
api/hum_service/: hum_service.Dockerfile  pyproject.toml
api/hum_service/hum_service/: app.py
api/hum_service/tests/: test_hum_service.py
api/main_service/: SylvestrisApi.sln  main_service.Dockerfile
api/main_service/SylvestrisApi/: WeatherForecast.cs
api/main_service/SylvestrisApi/Controllers/: WeatherForecastController.cs
api/main_service/SylvestrisApi/Properties/: launchSettings.json
api/main_service/SylvestrisApiTest/: SylvestrisApiTest.csproj  UnitTest1.cs
app/: package.json
app/src/: index.tsx
